# Gimbal_2Axis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.devcontainer/: devcontainer.json
Interface/: requirements.txt
Interface/GUI/: app.py  favoritos.xlsx  main.py
Interface/MQTT/: cliente.py  config.py  mqtt_logger.py  mqtt_process.py
hardware/: Drill_PTH_Through.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
main/: CMakeLists.txt  idf_component.yml  main.c  mainGlobals.h
main/BATERIA/: adc_bateria.c  adc_bateria.h
main/BOTAO/: botao.c  botao.h
main/BUFFER/: BufferTelemetria.c  BufferTelemetria.h
main/LOGGER/: log_mqtt.h
main/MPU6050/: SensorMPU6050.cpp  SensorMPU6050.h
main/PID/: ControladorPID.cpp  ControladorPID.h
main/WIFI_MQTT/: mqtt_esp32.c  mqtt_esp32.h  wifi_sta.c  wifi_sta.h
